--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div id="problem"></div>
     <input type="text" id="userAnswer" />
     <button onclick="checkAnswer()">Submit</button>
+    <button onclick="showHint()">Hint</button> <!-- Add this button for hints -->
     <p id="feedback"></p>
     <p id="score">Score: 0</p>
     <p id="timer">Time Left: 30</p>
